--- a/src/pages/Home/Navbar.css
+++ b/src/pages/Home/Navbar.css
@@ -6,8 +6,6 @@
     flex-direction: column;
 }
 
-
-
 .bottom-navbar {
     max-width: 100%;
     height: 100%;
@@ -17,9 +15,24 @@
     overflow: hidden;
 }
 
-.bottom-navbar h3 {
+.library-btn {
     color: white;
     font-family:Arial, Helvetica, sans-serif;
+    position: relative;
+}
+
+.library-btn:hover::after {
+    position: absolute;
+    top: 100%;
+    right: -20%;
+    content: "Collapse Your Library";
+    text-align: center;
+    width: 150px;
+    height: 23px;
+    font-size: 13px;
+    background-color: rgb(49, 49, 49);
+    border-radius: 5px;
+    box-shadow: 0px 5px 5px black;
 }
 
 .recent-artist-list {
@@ -52,4 +65,34 @@
     height: 50px;
     object-fit:fill;
     border-radius: 50%;
+}
+
+@media (max-width:100px) {
+
+    .bottom-navbar {
+    max-width: 100%;
+    height: 100%;
+    padding: 10px;
+    border-radius: 10px;
+    background: linear-gradient(to bottom ,rgba(43, 43, 43, 0.26), rgb(14, 14, 14));
+    overflow: hidden;
+    }
+
+    .bottom-navbar h3 {
+        display: none;
+    }
+
+    .recent-artist {
+        flex-wrap: nowrap;
+        overflow: hidden;
+        padding: 5px;
+    }
+
+
+    .recent-artist-img {
+        width: 50px;
+        height: 50px;
+        object-fit:fill;
+        border-radius: 50%;
+    }
 }
