--- a/src/pages/Home/search.css
+++ b/src/pages/Home/search.css
@@ -56,23 +56,7 @@
     box-shadow: 0px 5px 5px black;
 }
 
-.close {
-    color: white;
-    background-color: rgba(0, 0, 0, 0.384);
-    padding: 5px;
-    border-radius: 50%;
-    width: 15px;
-    height: 15px;
-    position: absolute;
-    right: 7%;
-}
-
-.close:hover {
-    width: 16px;
-    height: 16px;
-}
-
-.search-listing {
+.search-listing, .search-albums {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
